# strategy-regime-stress-lab

./: .gitignore  README.md  pyproject.toml
docs/: colab_training.md
examples/: README.md  make_synthetic_sample.py  sample_market_prices.csv  sample_strategy_returns.csv
notebooks/: 01_regime_detection.ipynb  02_strategy_stress_test.ipynb  03_deep_generator_experiment.ipynb  04_colab_deep_generator_training.ipynb
regime_lab/: __init__.py  cli.py  generator.py  io.py  metrics.py  regime.py  report.py  stress.py
tests/: test_generator_dataset.py  test_io.py  test_regime.py  test_report_cli_generator.py  test_stress.py
