[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "regime-lab"
version = "0.1.0"
description = "Strategy regime stress testing for research and risk analysis."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Gavin Jang" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
deep = ["torch>=2.0"]
notebook = ["jupyter>=1.0", "nbformat>=5.0"]

[project.scripts]
regime-lab = "regime_lab.cli:main"

[tool.poetry]
packages = [{ include = "regime_lab" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
